fixed map z-index bug

--- a/src/assets/style/pages/home/cmps/_stay-map.scss
+++ b/src/assets/style/pages/home/cmps/_stay-map.scss
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     height: calc(100vh - 178px);
-    z-index: 4;
+    // z-index: 4;
 
     .map-marker {
         background: white;
